[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/02_scenes/04_Items/02_Loot/LootItem.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="LootItem" type="RigidBody2D" groups=[
"loot",
]]
input_pickable = true
collision_layer = 8
mass = 22.0
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="InfoTriggerArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InfoTriggerArea"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="ItemDropAudio" type="AudioStreamPlayer2D" parent="."]
volume_db = 12.0
bus = "SFX"
[connection signal="area_entered" from="InfoTriggerArea" to="." method="_on_InfoTriggerArea_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
